--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,7 @@
     <title>Mortgage Monitor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body class="bg-white">
     <nav class="navbar navbar-light bg-light">
@@ -18,7 +15,9 @@
             </a>
             <div class="d-flex align-items-center">
                 <span class="navbar-text me-3">Hello &#128512;, <span class="text-primary">{{ username }}</span>!</span>
-                <a class="btn btn-danger" href="{{ url_for('logout') }}">Logout</a>
+                <button class="btn btn-warning me-2" id="updatePasswordBtn">Update Password</button>
+                <button class="btn btn-danger" id="removeAccountBtn">Remove Account</button>
+                <a class="btn btn-outline-secondary ms-3" href="{{ url_for('logout') }}">Logout</a>
             </div>
         </div>
     </nav>
@@ -142,22 +141,86 @@
         {% endif %}
     </div>
 
-    <script>
-        function logout() {
-            window.location.href = "{{ url_for('logout') }}";
-        }
+    <!-- Update Password Modal -->
+    <div class="modal fade" id="updatePasswordModal" tabindex="-1" aria-labelledby="updatePasswordModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="updatePasswordModalLabel">Update Password</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="updatePasswordForm">
+                        <label for="new_password">New Password:</label><br>
+                        <input type="password" id="new_password" name="new_password" class="form-control" required><br><br>
+                        <button type="submit" class="btn btn-primary">Update Password</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
-        function toggleDisplay(type) {
-            var monthlyTables = document.querySelectorAll('.monthly');
-            var fortnightlyTables = document.querySelectorAll('.fortnightly');
-            if (type === 'monthly') {
-                monthlyTables.forEach(table => table.style.display = 'block');
-                fortnightlyTables.forEach(table => table.style.display = 'none');
-            } else {
-                monthlyTables.forEach(table => table.style.display = 'none');
-                fortnightlyTables.forEach(table => table.style.display = 'block');
-            }
-        }
+    <!-- Remove Account Modal -->
+    <div class="modal fade" id="removeAccountModal" tabindex="-1" aria-labelledby="removeAccountModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="removeAccountModalLabel">Remove Account</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="removeAccountForm">
+                        <p>Are you sure you want to remove your account?</p>
+                        <button type="submit" class="btn btn-danger">Remove Account</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        $(document).ready(function() {
+            $("#updatePasswordBtn").click(function() {
+                $("#updatePasswordModal").modal('show');
+            });
+
+            $("#removeAccountBtn").click(function() {
+                $("#removeAccountModal").modal('show');
+            });
+
+            $("#updatePasswordForm").submit(function(event) {
+                event.preventDefault();
+                $.ajax({
+                    type: "POST",
+                    url: "{{ url_for('update_password') }}",
+                    data: $(this).serialize(),
+                    success: function(response) {
+                        alert(response.message);
+                        $("#updatePasswordModal").modal('hide');
+                    },
+                    error: function(xhr, status, error) {
+                        alert("Error: " + xhr.responseText);
+                    }
+                });
+            });
+
+            $("#removeAccountForm").submit(function(event) {
+                event.preventDefault();
+                if (confirm("Are you sure you want to remove your account?")) {
+                    $.ajax({
+                        type: "POST",
+                        url: "{{ url_for('remove_user') }}",
+                        success: function(response) {
+                            alert(response.message);
+                            window.location.href = "{{ url_for('index') }}";
+                        },
+                        error: function(xhr, status, error) {
+                            alert("Error: " + xhr.responseText);
+                        }
+                    });
+                }
+            });
+        });
     </script>
 </body>
 </html>
