--- a/templates/new_mortgage.html
+++ b/templates/new_mortgage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add New Mortgage</title>
+    <title>New Mortgage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
@@ -13,7 +13,7 @@
     <div class="row gx-5">
         <div class="col">
             <div class="main_mortgage p-4 border bg-light">
-                <h1 class="text-center">Add Mortgage</h1>
+                <h1 class="text-center">Calculate Mortgage</h1>
                 <form id="mortgageForm" action="{{ url_for('new_mortgage') }}" method="POST">
                     <div class="mb-3">
                         <label for="mortgage_name" class="form-label">Mortgage Name:</label>
@@ -60,8 +60,20 @@
                 <h2 class="text-dark text-center">Calculated Results</h2>
                 <div class="result-item">
                     <p class="title text-dark text-left">Mortgage Name: {{ mortgage_name }}</p>
+                    <p class="title text-dark text-left">Principal: {{ principal }}</p>
+                    <p class="title text-dark text-left">Interest:{{ interest }}</p>
+                    <p class="title text-dark text-left">Term: {{ term }}</p>
+                    <p class="title text-dark text-left">Deposit: {{ deposit }}</p>
+                    <p class="title text-dark text-left">Extra Cost: {{ extra_costs }}</p>
                 </div>
                 <div class="result-item">
+                    Estimated repayment ±0.1%
+                    total_amount_borrowed
+                    <p class="text-dark text-left">total_amount_borrowed {{ total_amount_borrowed }}</p>
+                    <p class="text-dark text-left">Estimated repayment ±0.1%: {{  }}</p>
+                    <p class="text-dark text-left">Estimated repayment ±0.1%: {{ monthly_interest }}</p>
+                    <p class="text-dark text-left">Estimated repayment ±0.1%: {{ monthly_interest }}</p>
+                    <p class="text-dark text-left">Estimated repayment ±0.1%: {{ monthly_interest }}</p>
                     <p class="text-dark text-left">Monthly Interest: {{ monthly_interest }}</p>
                     <p class="text-dark text-left">Monthly Principal: {{ monthly_principal_repayment }}</p>
                     <p class="text-dark text-left">Monthly Estimated Repayment: {{ monthly_repayment }}</p>
